--- a/index.html
+++ b/index.html
@@ -35,6 +35,64 @@
                 <button>Find Job</button>
             </div>
         </section>
+
+        <!-- Seccion Browse top categories -->
+        <section class="categories">
+            <p class="titulo2">FEATURED TOURS PACKAGES</p>
+            <h1 class="titulo-browse">Browse Top Categories</h1>
+            <div class="category-job">
+                <div class="box">
+                    <img src="img/Design & Creative.png" alt="">
+                    <p class="subtitulo">Design & Creative</p>
+                    <p class="anio">(653)</p>
+                </div>
+                <div class="box">
+                    <img src="img/Design & Development.webp" alt="">
+                    <p class="subtitulo">Design & Development</p>
+                    <p class="anio">(658)</p>
+                </div>
+                <div class="box">
+                    <img src="img/Sales & Marketing.webp" alt="">
+                    <p class="subtitulo">Sales & Marketing</p>
+                    <p class="anio">(658)</p>
+                </div>
+                <div class="box">
+                    <img src="img/Mobile Application.png" alt="">
+                    <p class="subtitulo">Mobile Application</p>
+                    <p class="anio">(658)</p>
+                </div>
+                <div class="box">
+                    <img src="img/Construction.png" alt="">
+                    <p class="subtitulo">Construction</p>
+                    <p class="anio">(658)</p>
+                </div>
+                <div class="box">
+                    <img src="img/Information Technology.png" alt="">
+                    <p class="subtitulo">Information Technology</p>
+                    <p class="anio">(653)</p>
+                </div>
+                <div class="box">
+                    <img src="img/Real Estate.png" alt="">
+                    <p class="subtitulo">Real Estate</p>
+                    <p class="anio">(658)</p>
+                </div>
+                <div class="box">
+                    <img src="img/Content Writer.png" alt="">
+                    <p class="subtitulo">Content Writer</p>
+                    <p class="anio">(658)</p>
+                </div>
+            </div>
+            <button>BROWSE ALL SECTORS</button>
+        </section>
+
+        <!-- Section Resumen -->
+        <section class="resumen">
+            <div class="resumen-box">
+                <p>FEATURED TOURS PACKAGES</p>
+                <h1 class="titulo-resumen">Make a Difference with Your Online Resume!</h1>
+                <button>UPLOAD YOUR CV</button>
+            </div>  
+        </section>
     </main>
 </body>
 </html>
