--- a/index.html
+++ b/index.html
@@ -93,6 +93,97 @@
                 <button>UPLOAD YOUR CV</button>
             </div>  
         </section>
+
+        <!-- Section Featured Jobs -->
+        <section class="featured-job">
+            <p class="titulo2">FEATURED TOURS PACKAGES</p>
+            <h1 class="titulo-browse">Featured Jobs</h1>
+            <div class="box-jobs">
+                <div class="items-jobs">
+                    <img src="img/434513147-felicitar-rendimiento-aplaudir-empleado.jpg" alt="">
+                    <div class="box-text">
+                        <h2>Digital Marketer</h2>
+                        <ul>
+                            <li>Creative Agency</li>
+                            <li>Atthens, Greece</li>
+                            <li>$3500 - $4000</li>
+                        </ul>
+                    </div>
+                    <div class="box-btn">
+                        <button>Full Time</button>
+                        <p>7 hours ago</p>
+                    </div>
+                </div>
+                <div class="items-jobs">
+                    <img src="img/434513147-felicitar-rendimiento-aplaudir-empleado.jpg" alt="">
+                    <div class="box-text">
+                        <h2>Digital Marketer</h2>
+                        <ul>
+                            <li>Creative Agency</li>
+                            <li>Atthens, Greece</li>
+                            <li>$3500 - $4000</li>
+                        </ul>
+                    </div>
+                    <div class="box-btn">
+                        <button>Full Time</button>
+                        <p>7 hours ago</p>
+                    </div>
+                </div>
+                <div class="items-jobs">
+                    <img src="img/434513147-felicitar-rendimiento-aplaudir-empleado.jpg" alt="">
+                    <div class="box-text">
+                        <h2>Digital Marketer</h2>
+                        <ul>
+                            <li>Creative Agency</li>
+                            <li>Atthens, Greece</li>
+                            <li>$3500 - $4000</li>
+                        </ul>
+                    </div>
+                    <div class="box-btn">
+                        <button>Full Time</button>
+                        <p>7 hours ago</p>
+                    </div>
+                </div>
+                <div class="items-jobs">
+                    <img src="img/434513147-felicitar-rendimiento-aplaudir-empleado.jpg" alt="">
+                    <div class="box-text">
+                        <h2>Digital Marketer</h2>
+                        <ul>
+                            <li>Creative Agency</li>
+                            <li>Atthens, Greece</li>
+                            <li>$3500 - $4000</li>
+                        </ul>
+                    </div>
+                    <div class="box-btn">
+                        <button>Full Time</button>
+                        <p>7 hours ago</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Section How it works -->
+        <section class="works">
+            <p class="titulo2">APPLY PROCESS</p>
+            <h1 class="titulo-browse">How it works</h1>
+            <div class="box-works">
+                <div class="works-items">
+                    <img src="img/Design & Creative.png" alt="">
+                    <h3>1. Search a job</h3>
+                    <p>Sorem spsum dolor sit amsectetur adipisclit, seddo eiusmod tempor incididunt ut laborea.</p>
+                </div>
+                <div class="works-items">
+                    <img src="img/Design & Development.webp" alt="">
+                    <h3>2. Apply for job</h3>
+                    <p>Sorem spsum dolor sit amsectetur adipisclit, seddo eiusmod tempor incididunt ut laborea.</p>
+                </div>
+                <div class="works-items">
+                    <img src="img/Sales & Marketing.webp" alt="">
+                    <h3>3. Get your job</h3>
+                    <p>Sorem spsum dolor sit amsectetur adipisclit, seddo eiusmod tempor incididunt ut laborea.</p>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
