slider-talented_jobs

--- a/index.html
+++ b/index.html
@@ -184,6 +184,58 @@
                 </div>
             </div>
         </section>
+
+        <!-- Section slider  -->
+        <section class="contenedor">
+            <div class="slider-contenedor">
+                <section class="contenido-slider">
+                    <div class="user">
+                        <img src="img/nancy_momoland_main_wm.png" alt="">
+                        <h2>Nancy Momoland</h2>
+                        <p class="rol">Cantante de K-pop Momoland</p>
+                        <p class="descripcion">Fue una ex aprendiz de Nega Network. En su adolescencia, apareció en varios programas de televisión, como The Unlimited y Mak Ee Rae Show: Just Do It Expedition en 2012, donde había visitado Filipinas y Saipán, junto a la actriz Kim Yoo-jung.</p>
+                    </div>
+                </section>
+                <section class="contenido-slider">
+                    <div class="user">
+                        <img src="img/nancy_momoland_main_wm.png" alt="">
+                        <h2>Nancy Momoland</h2>
+                        <p class="rol">Cantante de K-pop Momoland</p>
+                        <p class="descripcion">Fue una ex aprendiz de Nega Network. En su adolescencia, apareció en varios programas de televisión, como The Unlimited y Mak Ee Rae Show: Just Do It Expedition en 2012, donde había visitado Filipinas y Saipán, junto a la actriz Kim Yoo-jung.</p>
+                    </div>
+                </section>
+                <section class="contenido-slider">
+                    <div class="user">
+                        <img src="img/nancy_momoland_main_wm.png" alt="">
+                        <h2>Nancy Momoland</h2>
+                        <p class="rol">Cantante de K-pop Momoland</p>
+                        <p class="descripcion">Fue una ex aprendiz de Nega Network. En su adolescencia, apareció en varios programas de televisión, como The Unlimited y Mak Ee Rae Show: Just Do It Expedition en 2012, donde había visitado Filipinas y Saipán, junto a la actriz Kim Yoo-jung.</p>
+                    </div>
+                </section>
+            </div>
+        </section>
+        <!-- Section Talented People -->
+        <div class="contenedor-talented">
+            <section class="talented">
+                <div class="contenedor-text">
+                    <p class="titulo2">WHAT WE ARE DOING</p>
+                    <h1 class="titulo-browse">24k Talented people are getting Jobs</h1>
+                    <p class="desc-talented-1">Mollit anim laborum duis au dolor in voluptate velit ess cillum dolore eu lore dsu quality mollit anim laborumuis au dolor in voluptate velit cillum.</p>
+                    <p class="desc-talented-2">Mollit anim laborum.Duis aute irufg dhjkolohr in re voluptate velit esscillumlore eu quife nrulla parihatur. Excghcepteur signjnt occa cupidatat non inulpadeserunt mollit aboru. temnthp incididbnt ut labore mollit anim laborum suis aute.</p>
+                    <button>Post A Job</button>
+                </div>
+                <div class="contenedor-image">
+                </div>
+            </section>
+            <div class="since">
+                <p>Since</p>
+                <h1>1994</h1>
+            </div>
+        </div>
+        
+        
     </main>
+
+    <script src="js/main.js"></script>
 </body>
 </html>
