--- a/index.html
+++ b/index.html
@@ -233,7 +233,81 @@
             </div>
         </div>
         
+        <!-- Section our recent-->
         
+        <section class="recent">
+            <p class="titulo2">WHAT WE ARE DOING</p>
+            <h1 class="titulo-browse">24k Talented people are getting Jobs</h1>
+            <div class="row">
+                <div class="col">
+                    <img src="img/sof-doit-ps.jpg" alt="">
+                    <div class="box-now">
+                        <h1>24 Now</h1>
+                    </div>
+                    <div class="texto-recent">
+                        <p>Properties</p>
+                        <h2>Footprints in Time is perfect House in Kurashiki</h2>
+                        <a href="">READ MORE >></a>
+                    </div>
+                </div>
+                <div class="col">
+                    <img src="img/14383602325408.jpg" alt="">
+                    <div class="box-now">
+                        <h1>24 Now</h1>
+                    </div>
+                    <div class="texto-recent">
+                        <p>Properties</p>
+                        <h2>Footprints in Time is perfect House in Kurashiki</h2>
+                        <a href="">READ MORE >></a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Footer -->
+        <section class="pie-pagina">
+            <div class="row-pie">
+                <div class="columna">
+                    <h2>ABOUT US</h2>
+                    <p>Heaven frucvitful doesn't cover lesser dvsays appear creeping seasons so behold.</p>
+                    <img src="img/descarga.png" alt="">
+                </div>
+                <div class="columna">
+                    <h2>CONTACT INFO</h2>
+                    <p>Address :Your address goes here, your demo address.</p><br>
+                    <a href="">Phone : +8880 44338899</a>
+                    <a href="">Email : info@colorlib.com</a>
+                    <div class="text-pie1">
+                        <p>5000+ Talented Hunter</p>
+                    </div>
+                </div>
+                <div class="columna">
+                    <h2>IMPORTANT LINK</h2>
+                    <ul>
+                        <li><a href="">View Project</a></li>
+                        <li><a href="">Contact Us</a></li>
+                        <li><a href="">Testimonial</a></li>
+                        <li><a href="">Proparties</a></li>
+                        <li><a href="">Support</a></li>
+                    </ul>
+                    <div class="text-pie2">
+                        <p>451 Talented Hunter</p>
+                    </div>
+                </div>
+                <div class="columna">
+                    <h2>NEWSLETTER</h2>
+                    <p>Heaven fruitful doesn't over lesser in days. Appear creeping.</p>
+                    <input type="search" placeholder="Email Address">
+                    <div class="text-pie3">
+                        <p>568 Talented Hunter</p>
+                    </div>
+                </div>
+                <br>
+            </div>
+        </section>
+        <div class="footer">
+            <p>Copyright ©2022 All rights reserved | This template is made with  by Colorlib</p>
+        </div>
     </main>
 
     <script src="js/main.js"></script>
